--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
   "start": "react-scripts start",
-  "build": "cross-env NODE_ENV=production react-scripts build",
+  "build": "NODE_ENV=production react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
 }
