--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm install cross-env && cross-env NODE_ENV=production react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "npm run build && webpack-bundle-analyzer build/static/js/main.10541b20.js"
   },
   "eslintConfig": {
     "extends": [
@@ -41,7 +42,8 @@
     "*.css"
   ],
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "engines": {
     "node": "20.x"
